Refactor to use streams
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>